Update docs for version 0.1 of the plugin.

--- a/gapi/allclasses-frame.html
+++ b/gapi/allclasses-frame.html
@@ -21,6 +21,16 @@ All Classes
 <TD NOWRAP><FONT CLASS="FrameItemFont">
 <!--<A HREF="org/omg/CORBA/ARG_IN.html" title="interface in org.omg.CORBA" target="classFrame"><I>ARG_IN</I></A>-->
 <!--<BR>-->
+<A HREF="grails/plugin/shiro/oauth/FacebookOAuthToken.html" title="class in grails.plugin.shiro.oauth" target="classFrame">FacebookOAuthToken</A>
+<BR>
+<A HREF="grails/plugin/shiro/oauth/FacebookShiroOAuthService.html" title="class in grails.plugin.shiro.oauth" target="classFrame">FacebookShiroOAuthService</A>
+<BR>
+<A HREF="grails/plugin/shiro/oauth/GitHubShiroOAuthService.html" title="class in grails.plugin.shiro.oauth" target="classFrame">GitHubShiroOAuthService</A>
+<BR>
+<A HREF="grails/plugin/shiro/oauth/GoogleOAuthToken.html" title="class in grails.plugin.shiro.oauth" target="classFrame">GoogleOAuthToken</A>
+<BR>
+<A HREF="grails/plugin/shiro/oauth/GoogleShiroOAuthService.html" title="class in grails.plugin.shiro.oauth" target="classFrame">GoogleShiroOAuthService</A>
+<BR>
 <A HREF="grails/plugin/shiro/oauth/OAuthRealm.html" title="class in grails.plugin.shiro.oauth" target="classFrame">OAuthRealm</A>
 <BR>
 <A HREF="grails/plugin/shiro/oauth/OAuthToken.html" title="class in grails.plugin.shiro.oauth" target="classFrame">OAuthToken</A>
@@ -32,6 +42,8 @@ All Classes
 <A HREF="DefaultPackage/ShiroOauthGrailsPlugin.html" title="class in ShiroOauthGrailsPlugin" target="classFrame">ShiroOauthGrailsPlugin</A>
 <BR>
 <A HREF="grails/plugin/shiro/oauth/TwitterOAuthToken.html" title="class in grails.plugin.shiro.oauth" target="classFrame">TwitterOAuthToken</A>
+<BR>
+<A HREF="grails/plugin/shiro/oauth/TwitterShiroOAuthService.html" title="class in grails.plugin.shiro.oauth" target="classFrame">TwitterShiroOAuthService</A>
 <BR>
 <A HREF="DefaultPackage/UrlMappings.html" title="class in UrlMappings" target="classFrame">UrlMappings</A>
 <BR>
