--- a/gapi/grails/plugin/shiro/oauth/package-summary.html
+++ b/gapi/grails/plugin/shiro/oauth/package-summary.html
@@ -91,6 +91,31 @@ Package grails.plugin.shiro.oauth
     </TR>
 
         <TR BGCOLOR="white" CLASS="TableRowColor">
+        <TD WIDTH="15%"><B><A HREF="FacebookOAuthToken.html" title="class in grails/plugin/shiro/oauth">FacebookOAuthToken</A></B></TD>
+        <TD>Shiro authentication token for Facebook users. </TD>
+        </TR>
+
+        <TR BGCOLOR="white" CLASS="TableRowColor">
+        <TD WIDTH="15%"><B><A HREF="FacebookShiroOAuthService.html" title="class in grails/plugin/shiro/oauth">FacebookShiroOAuthService</A></B></TD>
+        <TD></TD>
+        </TR>
+
+        <TR BGCOLOR="white" CLASS="TableRowColor">
+        <TD WIDTH="15%"><B><A HREF="GitHubShiroOAuthService.html" title="class in grails/plugin/shiro/oauth">GitHubShiroOAuthService</A></B></TD>
+        <TD></TD>
+        </TR>
+
+        <TR BGCOLOR="white" CLASS="TableRowColor">
+        <TD WIDTH="15%"><B><A HREF="GoogleOAuthToken.html" title="class in grails/plugin/shiro/oauth">GoogleOAuthToken</A></B></TD>
+        <TD>Shiro authentication token for Google users. </TD>
+        </TR>
+
+        <TR BGCOLOR="white" CLASS="TableRowColor">
+        <TD WIDTH="15%"><B><A HREF="GoogleShiroOAuthService.html" title="class in grails/plugin/shiro/oauth">GoogleShiroOAuthService</A></B></TD>
+        <TD></TD>
+        </TR>
+
+        <TR BGCOLOR="white" CLASS="TableRowColor">
         <TD WIDTH="15%"><B><A HREF="OAuthRealm.html" title="class in grails/plugin/shiro/oauth">OAuthRealm</A></B></TD>
         <TD>This is a Shiro realm that handles authentication via OAuth providers. </TD>
         </TR>
@@ -115,6 +140,11 @@ Package grails.plugin.shiro.oauth
         <TR BGCOLOR="white" CLASS="TableRowColor">
         <TD WIDTH="15%"><B><A HREF="TwitterOAuthToken.html" title="class in grails/plugin/shiro/oauth">TwitterOAuthToken</A></B></TD>
         <TD>Shiro authentication token for Twitter users. </TD>
+        </TR>
+
+        <TR BGCOLOR="white" CLASS="TableRowColor">
+        <TD WIDTH="15%"><B><A HREF="TwitterShiroOAuthService.html" title="class in grails/plugin/shiro/oauth">TwitterShiroOAuthService</A></B></TD>
+        <TD></TD>
         </TR>
 
 </TABLE>
