Update docs for multi-providers.

--- a/ref/Items/reference.html
+++ b/ref/Items/reference.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>Shiro OAuth Plugin 0.1</title>
+    <title>Shiro OAuth Plugin 0.2</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -41,7 +41,7 @@ function addJsClass(el) {
         
         
     </div>
-    <p>Adds OAuth-based authentication to the [Shiro plugin|http://grails.org/plugin/shiro] using the [Scribe OAuth plugin|http://grails.org/plugin/oauth-scribe]. This plugin provides an OAuth realm that can easily be integrated into existing applications and a host of utility functions to make things like &quot;log in with Twitter&quot; almost trivial.
+    <p>Adds OAuth-based authentication to the [Shiro plugin|http://grails.org/plugin/shiro] using the [OAuth plugin|http://grails.org/plugin/oauth-scribe]. This plugin provides an OAuth realm that can easily be integrated into existing applications and a host of utility functions to make things like &quot;log in with Twitter&quot; almost trivial.
 </p>
 </div>
 
