Update docs for v0.3.

--- a/gapi/grails/plugin/shiro/oauth/package-summary.html
+++ b/gapi/grails/plugin/shiro/oauth/package-summary.html
@@ -4,6 +4,7 @@
 
 <title>grails.plugin.shiro.oauth (shiro-oauth)</title>
 <META NAME="keywords" CONTENT="grails.plugin.shiro.oauth package">
+<meta http-equiv="Content-Type" content="text/html; charset=MacRoman">
 <LINK REL ="stylesheet" TYPE="text/css" HREF="../../../../stylesheet.css" TITLE="Style">
 <link href="../../../../groovy.ico" type="image/x-icon" rel="shortcut icon">
 <link href="../../../../groovy.ico" type="image/x-icon" rel="icon">
