--- a/gapi/DefaultPackage/package-frame.html
+++ b/gapi/DefaultPackage/package-frame.html
@@ -5,7 +5,7 @@
 DefaultPackage
 </TITLE>
 
-
+<meta http-equiv="Content-Type" content="text/html; charset=MacRoman">
 <META NAME="keywords" CONTENT="DefaultPackage package">
 
 <LINK REL ="stylesheet" TYPE="text/css" HREF="../stylesheet.css" TITLE="Style">
