--- a/gapi/DefaultPackage/package-summary.html
+++ b/gapi/DefaultPackage/package-summary.html
@@ -4,6 +4,7 @@
 
 <title>DefaultPackage (shiro-oauth)</title>
 <META NAME="keywords" CONTENT="DefaultPackage package">
+<meta http-equiv="Content-Type" content="text/html; charset=MacRoman">
 <LINK REL ="stylesheet" TYPE="text/css" HREF="../stylesheet.css" TITLE="Style">
 <link href="../groovy.ico" type="image/x-icon" rel="shortcut icon">
 <link href="../groovy.ico" type="image/x-icon" rel="icon">
