--- a/gapi/grails/plugin/shiro/oauth/package-frame.html
+++ b/gapi/grails/plugin/shiro/oauth/package-frame.html
@@ -5,7 +5,7 @@
 grails.plugin.shiro.oauth
 </TITLE>
 
-
+<meta http-equiv="Content-Type" content="text/html; charset=MacRoman">
 <META NAME="keywords" CONTENT="grails/plugin/shiro/oauth package">
 
 <LINK REL ="stylesheet" TYPE="text/css" HREF="../../../../stylesheet.css" TITLE="Style">
