--- a/gapi/index.html
+++ b/gapi/index.html
@@ -2,8 +2,9 @@
 <HTML>
 <HEAD>
 <TITLE>
-{todo.title}
+Index (shiro-oauth)
 </TITLE>
+<meta http-equiv="Content-Type" content="text/html; charset=MacRoman">
 <link href="groovy.ico" type="image/x-icon" rel="shortcut icon">
 <link href="groovy.ico" type="image/x-icon" rel="icon">
 <SCRIPT type="text/javascript">
