--- a/gapi/overview-frame.html
+++ b/gapi/overview-frame.html
@@ -4,7 +4,7 @@
 <TITLE>
 Overview (Groovy Documentation)
 </TITLE>
-
+<meta http-equiv="Content-Type" content="text/html; charset=MacRoman">
 <META NAME="keywords" CONTENT="Overview">
 
 <LINK REL ="stylesheet" TYPE="text/css" HREF="stylesheet.css" TITLE="Style">
