--- a/gapi/overview-summary.html
+++ b/gapi/overview-summary.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>Overview (shiro-oauth)</title>
+<meta http-equiv="Content-Type" content="text/html; charset=MacRoman">
 <META NAME="keywords" CONTENT="Overview">
 <LINK REL ="stylesheet" TYPE="text/css" HREF="stylesheet.css" TITLE="Style">
 <link href="groovy.ico" type="image/x-icon" rel="shortcut icon">
